# product-web-crawler

./: .gitignore  Dockerfile  README.md  celery_app.py  celery_config.py  docker-compose.yml  products.py  pyproject.toml  run.py
app/: crawler.py  crawler_enums.py  dao.py  helpers.py  tasks.py
